[gd_scene load_steps=3 format=3 uid="uid://c5ql7aee5i1nl"]

[ext_resource type="Script" uid="uid://cwlh1vodyfqyw" path="res://stuff/game_stuff/inventory/item_detail_popup.gd" id="1_popup"]
[ext_resource type="Texture2D" uid="uid://baex2wxh66v5l" path="res://icon.svg" id="2_pku26"]

[node name="ItemDetailPopup" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -920.0
offset_top = -210.0
offset_right = -620.0
offset_bottom = 365.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_popup")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="CloseButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 20
text = "X"

[node name="NameLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Item Name"
horizontal_alignment = 1

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("2_pku26")
expand_mode = 1
stretch_mode = 5

[node name="DescLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(260, 0)
layout_mode = 2
theme_override_constants/line_spacing = 4
theme_override_font_sizes/font_size = 20
text = "Item Description goes here."
autowrap_mode = 2

[connection signal="pressed" from="MarginContainer/VBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
